fix: anchor covering whole button tag

--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -19,6 +19,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  outline: none;
 }
 
 html {
@@ -30,8 +31,7 @@ body {
   height: 100vh;
   width: 99vw;
   font-family: var(--font-family-1);
-  -webkit-font-smoothing: antialiased;
-  outline: 0;
+  -webkit-font-smoothing: antialiased
   text-transform: uppercase;
   overflow-x: hidden;
 }
