--- a/styles/header.css
+++ b/styles/header.css
@@ -39,12 +39,8 @@
 }
 
 .header-menu__button {
-  border: 2px solid var(--color-white);
   background-color: transparent;
-  width: 100%;
-  min-width: 150px;
-  border-radius: 0.25rem;
-  padding: 1rem;
+  border: 2px solid var(--color-white);
 }
 
 .header-menu__link {
@@ -52,6 +48,9 @@
   font-size: var(--font-text-2);
   letter-spacing: 2px;
   font-weight: bold;
+  width: 100%;
+  min-width: 150px;
+  padding: 1rem;
   display: block;
 }
 
